--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,20 @@
 annotated-types==0.7.0
 anyio==4.11.0
 audioop-lts==0.2.2
+blinker==1.9.0
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 colorama==0.4.6
 filelock==3.20.0
+Flask==3.1.2
 fsspec==2025.10.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+itsdangerous==2.2.0
 Jinja2==3.1.6
 llvmlite==0.45.1
 MarkupSafe==3.0.3
@@ -41,3 +45,4 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+Werkzeug==3.1.4
