--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,18 +39,14 @@ outcome==1.3.0.post0
 playwright==1.50.0
 propcache==0.4.1
 PyAudio==0.2.14
-PyAudioWPatch==0.2.12.7
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 pydub==0.25.1
 pyee==12.1.1
 pyotp==2.9.0
-pypiwin32==223
-PySocks==1.7.1
+pycparser==2.23
 python-dotenv==1.2.1
-pyttsx3==2.99
-pywin32==311
 regex==2025.11.3
 requests==2.32.5
 selenium==4.38.0
