change some deprecated packages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.2.1",
-    "@electron-forge/maker-deb": "^6.2.1",
-    "@electron-forge/maker-rpm": "^6.2.1",
-    "@electron-forge/maker-squirrel": "^6.2.1",
-    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,8 +37,8 @@
     "@types/react-dom": "^18.0.0",
     "concurrently": "^7.6.0",
     "electron": "^39.2.7",
-    "electron-builder": "^24.4.0",
-    "react-scripts": "5.0.1",
+    "electron-builder": "^25.1.8",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.4",
     "wait-on": "^7.0.1"
   },
@@ -96,5 +96,12 @@
         "deb"
       ]
     }
+  },
+  "overrides": {
+    "tar": "^7.5.3",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31",
+    "webpack-dev-server": "^5.2.1",
+    "tmp": "^0.2.4"
   }
 }
