--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,27 +25,25 @@ httpx==0.28.1
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
-llvmlite==0.45.1
+llvmlite==0.46.0
 MarkupSafe==3.0.3
 more-itertools==10.8.0
 mpmath==1.3.0
 multidict==6.7.0
 networkx==3.6
-numba==0.62.1
+numba==0.63.0
 numpy==2.3.5
 ollama==0.6.1
 openai-whisper @ git+https://github.com/openai/whisper.git@c0d2f624c09dc18e709e37c2ad90c039a4eb72a2
 outcome==1.3.0.post0
 playwright==1.50.0
 propcache==0.4.1
-PyAudio==0.2.14
 pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 pydub==0.25.1
 pyee==12.1.1
 pyotp==2.9.0
-pycparser==2.23
 python-dotenv==1.2.1
 regex==2025.11.3
 requests==2.32.5
@@ -56,12 +54,11 @@ sortedcontainers==2.4.0
 SoundCard==0.4.5
 soupsieve==2.8
 SpeechRecognition==3.14.4
-standard-aifc==3.13.0
-standard-chunk==3.13.0
 sympy==1.14.0
 tabulate==0.9.0
 tiktoken==0.12.0
-torch==2.9.1
+torch==2.10.0
+torchaudio==2.10.0
 tqdm==4.67.1
 trio==0.32.0
 trio-websocket==0.12.2
