--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,6 +54,7 @@ sortedcontainers==2.4.0
 SoundCard==0.4.5
 soupsieve==2.8
 SpeechRecognition==3.14.4
+PyAudio==0.2.14
 sympy==1.14.0
 tabulate==0.9.0
 tiktoken==0.12.0
