--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,8 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
 attrs==25.4.0
+audioop-lts==0.2.2
+av==16.1.0
 beautifulsoup4==4.13.0
 blinker==1.9.0
 certifi==2025.11.12
@@ -11,17 +13,24 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
 comtypes==1.4.13
+ctranslate2==4.6.3
 edge-tts==7.2.7
+faster-whisper==1.2.1
 filelock==3.20.0
 Flask==3.1.2
+flatbuffers==25.12.19
 frozenlist==1.8.0
 fsspec==2025.10.0
 greenlet==3.3.0
 gTTS==2.5.4
 h11==0.16.0
+hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
+huggingface_hub==1.3.7
+humanfriendly==10.0
 idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -32,12 +41,15 @@ mpmath==1.3.0
 multidict==6.7.0
 networkx==3.6
 numba==0.62.1
-numpy==2.3.5
+numpy==2.4.2
 ollama==0.6.1
+onnxruntime==1.23.2
 openai-whisper @ git+https://github.com/openai/whisper.git@c0d2f624c09dc18e709e37c2ad90c039a4eb72a2
 outcome==1.3.0.post0
+packaging==26.0
 playwright==1.50.0
 propcache==0.4.1
+protobuf==6.33.5
 PyAudio==0.2.14
 PyAudioWPatch==0.2.12.7
 pycparser==2.23
@@ -47,27 +59,36 @@ pydub==0.25.1
 pyee==12.1.1
 pyotp==2.9.0
 pypiwin32==223
+PyQt6==6.10.2
+PyQt6-Qt6==6.10.1
+PyQt6_sip==13.11.0
+pyreadline3==3.5.4
 PySocks==1.7.1
 python-dotenv==1.2.1
 pyttsx3==2.99
 pywin32==311
+PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
 selenium==4.38.0
-setuptools==80.9.0
+setuptools==82.0.0
+shellingham==1.5.4
 sniffio==1.3.1
 sortedcontainers==2.4.0
 SoundCard==0.4.5
 soupsieve==2.8
 SpeechRecognition==3.14.4
-PyAudio==0.2.14
+standard-aifc==3.13.0
+standard-chunk==3.13.0
 sympy==1.14.0
 tabulate==0.9.0
 tiktoken==0.12.0
+tokenizers==0.22.2
 torch==2.9.1
 tqdm==4.67.1
 trio==0.32.0
 trio-websocket==0.12.2
+typer-slim==0.21.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
